<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/design_default_color_primary"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Status: Pending"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPickedOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="gone" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:trackColor="@color/browser_actions_bg_grey"
        app:indicatorColor="@color/design_default_color_secondary_variant"
        android:indeterminate="true"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/garbage_type"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textColor="@color/design_default_color_secondary_variant"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Home Waste" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/Address"
        android:textColor="@color/design_default_color_primary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="10dp"
        app:contentPadding="16dp">

       <androidx.appcompat.widget.LinearLayoutCompat
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <androidx.appcompat.widget.AppCompatTextView
               android:id="@+id/tvAddress"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textSize="16sp"
               tools:text="Full Address" />

           <com.google.android.material.button.MaterialButton
               android:id="@+id/btFindRoute"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="12dp"
               style="@style/Widget.Material3.Button.ElevatedButton"
               android:textSize="16sp"
               android:text="Find route"/>

       </androidx.appcompat.widget.LinearLayoutCompat>



    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/producer_details"
        android:textColor="@color/design_default_color_primary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="5dp"
        app:contentPadding="16dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAddedBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="By: Producer Name"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDate"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/design_default_color_secondary_variant"
                android:textSize="16sp"
                tools:text="Added On : 10/10/2001" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/design_default_color_secondary_variant"
                android:textSize="16sp"
                tools:text="Time: 10:24pm" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </com.google.android.material.card.MaterialCardView>


    <RadioGroup
        android:id="@+id/rgOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:paddingVertical="20dp">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbReject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reject"
            android:textSize="16sp"
            android:layout_marginEnd="30dp"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Accept"
            android:textSize="16sp" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingHorizontal="60dp"
        android:textSize="18sp"
        android:text="Submit"/>



</androidx.appcompat.widget.LinearLayoutCompat>